[gd_scene load_steps=6 format=3 uid="uid://bqlnrw8liqyii"]

[ext_resource type="Script" uid="uid://dmr55icd3m22o" path="res://canvas_layer.gd" id="1_gla7p"]

[sub_resource type="LabelSettings" id="LabelSettings_gla7p"]
font_size = 30
font_color = Color(0.501961, 0, 0, 0.6)

[sub_resource type="LabelSettings" id="LabelSettings_5e8aq"]
font_color = Color(1, 1, 0.807843, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vuawn"]
font_color = Color(1, 1, 0.164706, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d1n33"]
line_spacing = 5.0
paragraph_spacing = 1.0

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_gla7p")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.673
anchor_bottom = 0.733
offset_left = 4.0
offset_top = -43.0
offset_right = -195.296
offset_bottom = -193.984
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 3.0
offset_right = -221.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="ColorRect/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/PanelContainer/Panel"]
layout_mode = 2
offset_left = 2.0
offset_top = -1.0
offset_right = 195.0
offset_bottom = 127.0
alignment = 1

[node name="Label" type="Label" parent="ColorRect/CenterContainer/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_gla7p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_ContinueAdvertise" type="Button" parent="ColorRect/CenterContainer/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Ver anuncio y continuar"

[node name="Button_Restart" type="Button" parent="ColorRect/CenterContainer/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Reintentar"

[node name="Button_GoMenu" type="Button" parent="ColorRect/CenterContainer/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Ir al men√∫"

[node name="final_score_label" type="Label" parent="ColorRect/CenterContainer/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_5e8aq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="high_score_label" type="Label" parent="ColorRect/CenterContainer/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_vuawn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="new_record_label" type="Label" parent="ColorRect/CenterContainer/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_d1n33")
